--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
 # Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
 .venv/
-venv/
-
-# dotenv (se você criar local)
 .env
 
-# DB local
-*.db
-
-# Alembic caches
-.alembic/
-
-# Logs
-*.log
+# Alembic
+alembic/versions/__pycache__/
 
 # OS
 .DS_Store
