--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ psycopg[binary]==3.3.2
 # =========================
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.1.3
 itsdangerous==2.2.0
 
 # =========================
