--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,6 @@ gunicorn==21.2.0
 # =========================
 SQLAlchemy==2.0.32
 alembic==1.13.2
-
-# Postgres driver (compatível com "postgresql+psycopg://")
 psycopg[binary]==3.3.2
 
 # =========================
@@ -39,12 +37,18 @@ python-multipart==0.0.9
 # Utils
 # =========================
 email-validator==2.2.0
+pillow==10.4.0
 
 # =========================
 # PDF + IA
 # =========================
 pypdf==5.1.0
 openai==1.57.4
+httpx>=0.27.0
+
+# =========================
+# Relatórios / Exportações
+# =========================
 openpyxl==3.1.5
 reportlab==4.1.0
 
